  - #4737, Improve performance and reduce memory usage in ST_AsMVT, especially in
           queries involving parallelism (Raúl Marín)
  - #4746, Micro optimizations to the serialization process (Raúl Marín)
  - #4719, Fail fast when srids don't match ST_Intersection(geometry,raster)
            Also schema qualify calls in function. (Regina Obe)

* Bug fixes *
  - #4691, Fix segfault during gist index creation with empty geometries (Raúl Marín)
  - Fix handling of bad WKB inputs (Oracle types) and unit tests for
    malformed WKB. Remove memory leaks in malformed WKB cases. (Paul Ramsey)
  - #4740, Round values in geography_distance_tree
           as we do on geography_distance (Raúl Marín, Paul Ramsey, Regina Obe)
  - #4739, Ensure all functions using postgis_oid initialize the internal cache (Raúl Marín)
  - #4767, #4768, #4771, #4772, Fix segfault when parsing invalid WKB (Raúl Marín)
  - #4769, Fix segfault in st_addband (Raúl Marín)


PostGIS 3.1.0alpha2
2020/07/18

Only tickets not included in 3.1.0alpha1

* New features *
  - #4656, Cast a geojson_text::geometry for implicit GeoJSON ingestion (Raúl Marín)
  - #4687, Expose GEOS MaximumInscribedCircle (Paul Ramsey)
  - #4710, ST_ClusterKMeans now works with 3D geometries (Darafei Praliaskouski)

* Enhancements *
  - #4675, topology.GetRingEdges now implemented in C (Sandro Santilli)
  - #4681, ST_GetFaceGeometry: print corruption information (Sandro Santilli)
  - #4651: ST_Simplify: Don't copy if nothing is removed (Raúl Marín)
  - #4657: Avoid De-TOASTing where possible (Paul Ramsey)
  - #4490, Tweak function costs (Raúl Marín)
  - #4672, Cache getSRSbySRID and getSRIDbySRS (Raúl Marín)
  - #4676, Avoid decompressing toasted geometries to read only the header (Raúl Marín)
           Optimize cast to Postgresql point type (Raúl Marín)
  - #4620, Update internal wagyu to 0.5.0 (Raúl Marín)
  - #4623, Optimize varlena returning functions (Raúl Marín)